@@ -1,32 +1,24 @@
 plugins {
   id 'java'
   id 'application'
-  id 'org.javamodularity.moduleplugin' version '1.8.12'
   id 'org.openjfx.javafxplugin' version '0.0.13'
-  id 'org.beryx.jlink' version '2.25.0'
 }
 
-group 'org.CE216'
-version '1.0-SNAPSHOT'
+group 'org.CE'
+version '1.0'
 
 repositories {
   mavenCentral()
 }
 
-ext {
-  junitVersion = '5.10.2'
-}
-
-sourceCompatibility = '21'
-targetCompatibility = '21'
-
-tasks.withType(JavaCompile) {
-  options.encoding = 'UTF-8'
+dependencies {
+  implementation 'org.openjfx:javafx-controls:21'
+  implementation 'org.openjfx:javafx-fxml:21'
+  implementation files('libs/json-20250107.jar')  // Projeye özgü kütüphaneler
 }
 
 application {
-  mainModule = 'org.ce216.gamecatalog'
-  mainClass = 'org.ce216.gamecatalog.UIManager'
+  mainClass = 'org.ce.gamecatalog.UIManager'
 }
 
 javafx {
@@ -34,37 +26,17 @@ javafx {
   modules = ['javafx.controls', 'javafx.fxml']
 }
 
-
-dependencies {
-  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
-  implementation files('libs/json-20250107.jar')
-  implementation 'org.json:json:20210307'
-}
-
-test {
-  useJUnitPlatform()
-}
-
-
-jlink {
-  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-  launcher {
-    name = 'app'
-  }
-}
-
-
-jlinkZip {
-  group = 'distribution'
-}
-
-
-tasks.withType(JavaExec) {
+run {
   jvmArgs = [
-          '--module-path', configurations.runtimeClasspath.asPath,
-          '--add-modules', 'javafx.controls,javafx.fxml',
-          '--enable-native-access=javafx.graphics'
+          '--module-path', 'C:/Java/lib',  // Burada doğru JavaFX modül yolunu belirtmelisin
+          '--add-modules', 'javafx.controls,javafx.fxml'
   ]
+}
+
+jar {
+  manifest {
+    attributes(
+            'Main-Class': 'org.ce.gamecatalog.UIManager'
+    )
+  }
 }
